--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the map controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+div.tile {
+	width: 40px;
+	height: 40px;
+	-webkit-transform: rotate(45deg);
+	-moz-transform: rotate(45deg);
+	-o-transform: rotate(45deg);
+	background: blue;
+	border:1px solid black;
+	margin-top:15px;
+	margin-right:15px;
+}
+
+span.lng {
+	float:left;
+}
+
+span.odd {
+	margin-top:35px;
+}
