--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Map#index</h1>
-<p>Find me in app/views/map/index.html.erb</p>
+<span class="lng">
+	<div class="tile"></div>
+	<div class="tile"></div>
+</span>
+<!-- <span class="lng, odd">
+	<div class="tile"></div>
+	<div class="tile"></div>
+</span> -->
+<span class="lng">
+	<div class="tile"></div>
+	<div class="tile"></div>
+</span>
