--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,5 +1,5 @@
 <span class="lng">
-	<div class="tile"></div>
+	<div class="tile">W</div>
 	<div class="tile"></div>
 </span>
 <!-- <span class="lng, odd">
