--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,12 +1,13 @@
-<span class="lng">
-	<div class="tile">W</div>
-	<div class="tile"></div>
-</span>
-<!-- <span class="lng, odd">
-	<div class="tile"></div>
-	<div class="tile"></div>
-</span> -->
-<span class="lng">
-	<div class="tile"></div>
-	<div class="tile"></div>
-</span>
+<div id="map">
+
+	<span class="lat">
+		<div class="tile"></div>
+		<div class="tile"></div>
+	</span>
+
+	<span class="lat">
+		<div class="tile"></div>
+		<div class="tile"></div>
+	</span>
+
+</div>
