--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -26,8 +26,9 @@ div#map{
 	-webkit-transform: rotate(45deg);
 	-moz-transform: rotate(45deg);
 	-o-transform: rotate(45deg);
-	margin-left:auto;
-	margin-right:auto;
+	margin-left:100px;
+	margin-top:100px;
+
 }
 
 div.plains{
