--- a/app/views/maps/show.html.erb
+++ b/app/views/maps/show.html.erb
@@ -1,6 +1,5 @@
 <p id="notice"><%= notice %></p>
 
-
 <div id="map">
 	<% terrains = @map.terrains.sort_by {|terrain| terrain.id}%>
 	<% tile_number = 0 %>
@@ -15,4 +14,6 @@
 	<% end %>
 </div>
 
-<p id="biomeGuide"></p>
+<div id="mapEdit" class="mapEdit">
+	<%= render "edit" %>
+</div>
