click tiles to select them

--- a/app/assets/stylesheets/maps.css.scss
+++ b/app/assets/stylesheets/maps.css.scss
@@ -15,6 +15,11 @@ div.tile {
   float:left;
 }
 
+div.selected{
+  border:dotted black 3px;
+  width:34px;
+  height:34px;
+}
 
 div#map{
   clear:both;
