--- a/app/views/maps/_edit.html.erb
+++ b/app/views/maps/_edit.html.erb
@@ -12,13 +12,17 @@
       </div>
   <% end %>
 
+
   <div class="field">
-    <%= f.label :width %><br />
-    <%= f.number_field :width %>
+    <%#= f.label :width %><br />
+    <%#= f.number_field :width %>
   </div>
   <div class="field">
-    <%= f.label :height %><br />
-    <%= f.number_field :height %>
+    <%#= f.label :height %><br />
+    <%#= f.number_field :height %>
   </div>
 <% end %>
-<p id="biomeGuide"></p>
+
+<div id="terrainGuide">
+  <p id="selectedTerrainName"></p>
+</div>
